[package]
name = "omt"
version = "0.5.2-alpha"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "A set of tiny tools mostly used for game development. A Texture atlas packer, a font converter, a pakfile creator."
readme = "README.md"
homepage = "https://github.com/AndreasOM/omt"
repository = "https://github.com/AndreasOM/omt"
keywords = ["tools", "gamedev"]
categories = ["command-line-utilities","compression","encoding","game-development","graphics"]

exclude = [
    "Content",
    "Data",
    "docs",
#    "src",
    ".circleci",
    ".github",
    ".gitignore",
]

[lib]
name = "omt"
path = "src/lib.rs"

[[bin]]
name = "omt-atlas"
path = "src/omt-atlas.rs"

[[bin]]
name = "omt-asset"
path = "src/omt-asset.rs"

[[bin]]
name = "omt-font"
path = "src/omt-font.rs"

[[bin]]
name = "omt-packer"
path = "src/omt-packer.rs"

[[bin]]
name = "omt-script"
path = "src/omt-script.rs"

[[bin]]
name = "omt-shader"
path = "src/omt-shader.rs"

[[bin]]
name = "omt-soundbank"
path = "src/omt-soundbank.rs"

[[bin]]
name = "omt-xcassets"
path = "src/omt-xcassets.rs"

[dependencies]
byteorder = "1.4.3"
clap = "3.2.17"
crc = "3.0.0"
glob = "~0.3.0"
image = "0.24.3"
minifb = "0.23.0"
regex = "1.5.6"
yaml-rust = "~0.4.3"
rusttype = "0.8.3"
om-fork-distance-field = "0.1.8"
rlua = "0.19.4"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
resize="0.7.2"
png="0.17.5"
rgb = "0.8.32"

# shader-crusher = { git = "https://github.com/AndreasOM/shader-crusher" }
shader-crusher = "0.4.0-alpha"

