[package]
name = "omt"
version = "0.10.0-dev"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "A set of tiny tools mostly used for game development. A Texture atlas packer, a font converter, a pakfile creator."
readme = "README.md"
homepage = "https://github.com/AndreasOM/omt"
repository = "https://github.com/AndreasOM/omt"
keywords = ["tools", "gamedev"]
categories = ["command-line-utilities","compression","encoding","game-development","graphics"]

exclude = [
    "Content",
    "Data",
    "docs",
#    "src",
    ".circleci",
    ".github",
    ".gitignore",
]

[lib]
name = "omt"
path = "src/lib.rs"

[[bin]]
name = "omt-atlas"
path = "src/omt-atlas.rs"

[[bin]]
name = "omt-asset"
path = "src/omt-asset.rs"

[[bin]]
name = "omt-font"
path = "src/omt-font.rs"

[[bin]]
name = "omt-packer"
path = "src/omt-packer.rs"

[[bin]]
name = "omt-script"
path = "src/omt-script.rs"

[[bin]]
name = "omt-shader"
path = "src/omt-shader.rs"

[[bin]]
name = "omt-soundbank"
path = "src/omt-soundbank.rs"

[[bin]]
name = "omt-xcassets"
path = "src/omt-xcassets.rs"

[dependencies]
byteorder = "1.4.3"
# clap = { version = "3.2.17", features = ["derive", "cargo", "env", "regex", "unicode", "wrap_help", "deprecated"] }
clap = { version = "4", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
crc = "3.0.0"
glob = "~0.3.0"
image = "0.25"
minifb = "0.28.0"
regex = "1.5.6"
yaml-rust = "~0.4.3"
rusttype = "0.9.2"
om-fork-distance-field = "0.2.2"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
resize="0.8.8"
png="0.18.0"
rgb = "0.8.32"

# shader-crusher = { git = "https://github.com/AndreasOM/shader-crusher" }
shader-crusher = "0.5.0-alpha"
anyhow = "1.0.62"
symlink = "0.1.0"

