[package]
name = "omt"
version = "0.13.0-dev"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "A set of tiny tools mostly used for game development. A Texture atlas packer, a font converter, a pakfile creator."
readme = "README.md"
homepage = "https://github.com/AndreasOM/omt"
repository = "https://github.com/AndreasOM/omt"
keywords = ["tools", "gamedev"]
categories = ["command-line-utilities","compression","encoding","game-development","graphics"]

exclude = [
    "Content",
    "Data",
    "docs",
#    "src",
    ".circleci",
    ".github",
    ".gitignore",
]

[lib]
name = "omt"
path = "src/lib.rs"

[[bin]]
name = "omt-atlas"
path = "src/omt-atlas.rs"

[[bin]]
name = "omt-asset"
path = "src/omt-asset.rs"

[[bin]]
name = "omt-color-mapper"
path = "src/omt-color-mapper.rs"

[[bin]]
name = "omt-font"
path = "src/omt-font.rs"

[[bin]]
name = "omt-packer"
path = "src/omt-packer.rs"

[[bin]]
name = "omt-script"
path = "src/omt-script.rs"

[[bin]]
name = "omt-shader"
path = "src/omt-shader.rs"

[[bin]]
name = "omt-soundbank"
path = "src/omt-soundbank.rs"

[[bin]]
name = "omt-xcassets"
path = "src/omt-xcassets.rs"

[dependencies]
byteorder = "1.5"
# clap = { version = "3.2.17", features = ["derive", "cargo", "env", "regex", "unicode", "wrap_help", "deprecated"] }
clap = { version = "4", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
crc = "3.3"
glob = "~0.3.0"
image = { version = "0.25", default-features = false, features = ["png"] }
# Using fork until upstream PR is merged
minifb = { git = "https://github.com/AndreasOM/rust_minifb", branch = "master" }
regex = "1.12"
yaml-rust2 = "0.10"
ab_glyph = "0.2.32"
om-fork-distance-field = "0.3.0-alpha"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
resize="0.8.8"
png="0.18.0"
rgb = "0.8.46"

# shader-crusher = { git = "https://github.com/AndreasOM/shader-crusher" }
shader-crusher = "0.5.0-alpha"
anyhow = "1.0"
symlink = "0.1.0"
rand = "0.8"
kiddo = "4"

